[workspace]
resolver = "2"

members = [
    "decide-protocol",
    "decide-core",
    "components/lights",
    "components/house_light",
    "components/stepper_motor",
    "components/peckboard",
    "components/sound_alsa",
    "components/ranger_vl53l4",
    "components/ranger_vcnl4040"
]
