[package]
name = "decide-core"
version = "1.1.0"
authors = ["Jonah Weissman <jonahrweissman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-protocol = { path = "../decide-protocol" }
lights = { path = "../components/lights" }
house_light = {path = "../components/house_light"}
peckboard = { path = "../components/peckboard" }
sound_alsa = { path = "../components/sound_alsa" }
stepper_motor = { path = "../components/stepper_motor" }
tmq = { version = "0.3.2", features = ["zmq-vendored"] }
log = "0.4.16"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = {version = "0.7.10"}
httparse = "1.8"
socket2 = "0.5"
nix = {version = "0.26.4", features = ["net"] }
pretty_env_logger = "0.4.0"
prost = "0.11.1"
prost-types = "0.11.1"
anyhow = "1.0"
directories = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
futures = "0.3.17"
serde-value = "0.7.0"
sha3 = "0.10.6"
num-traits = "0.2.14"
tokio-stream = "0.1.8"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ['env-filter', 'time'] }
async-trait = "0.1.51"
time = { version = "0.3.20", features = ["local-offset"] }
[features]
dummy-mode = []
