[package]
name = "decide-core"
version = "1.1.0"
authors = ["Jonah Weissman <jonahrweissman@gmail.com>", "Bao Le <uac6qw@virginia.edu>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-protocol = { path = "../decide-protocol" }
lights = { path = "../components/lights" }
house_light = {path = "../components/house_light"}
peckboard = { path = "../components/peckboard" }
sound_alsa = { path = "../components/sound_alsa" }
stepper_motor = { path = "../components/stepper_motor" }
tripwire = { path = "../components/tripwire"}
tmq = { version = "0.3", features = ["zmq-vendored"] }
zmq = "0.9.2"
log = "0.4.16"
tokio = { version = "1.13", features = ["full"] }
pretty_env_logger = "0.5.0"
prost = "0.13.4"
prost-types = "0.13.4"
anyhow = "1.0"
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
futures = "0.3.17"
serde-value = "0.7.0"
sha3 = "0.10.6"
num-traits = "0.2.14"
tokio-stream = "0.1.8"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ['env-filter', 'time'] }
async-trait = "0.1.51"
time = { version = "0.3.20", features = ["local-offset"] }
clap = { version = "4.5.23", features = ["derive"]}
clap-vergen = "0.2.0"

[build-dependencies]
vergen = {version = "7.3.2", features = ["build", "cargo", "rustc"]}

[features]
dummy-mode = []
