[package]
name = "decide-proto"
version = "0.1.0"
authors = ["Jonah Weissman <jonahrweissman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
prost = "0.9"
prost-types = "0.9"
thiserror = "1.0"
enumn = "0.1.3"
tmq = "0.3.0"

[build-dependencies]
prost-build = "0.9"
