[package]
name = "decide-protocol"
version = "0.1.0"
authors = ["Jonah Weissman <jonahrweissman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "0.4"
prost = "0.11.1"
prost-types = "0.11.1"
thiserror = "1.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
tmq = "0.3.0"
tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1.51"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde-value = "0.7.0"

[build-dependencies]
prost-build = "0.9"
