[package]
name = "decide-protocol"
version = "0.1.0"
authors = ["Jonah Weissman <jonahrweissman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
prost = "0.11.1"
bytes = "1.2.1"
prost-types = "0.11.1"
thiserror = "1.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
tmq = { version = "0.3", features = ["zmq-vendored"] }
tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1.51"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
serde-value = "0.7.0"
gpio-cdev = "0.5.0"

[build-dependencies]
prost-build = "0.11.1"
protobuf-src = "1.1.0+21.5"
