[package]
name = "house_light"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-proto = { path = "../../decide-proto" }
prost = "0.9"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive"] }

tracing = "0.1.29"

tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1.51"

sun-times = "0.1.2"
chrono = "0.4.19"
sun = "0.2.0"

[build-dependencies]
prost-build = "0.9"
