[package]
name = "house_light"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-protocol = { path = "../../decide-protocol" }
prost = "0.13.4"
prost-types = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.9"
tracing = "0.1.29"

tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1.51"

sun-times = "0.2.0"
chrono = "0.4.19"
sun = "0.3.1"

[build-dependencies]
prost-build = "0.11.1"
protobuf-src = "1.1.0+21.5"

