[package]
name = "lights"
version = "0.1.0"
authors = ["Jonah Weissman <jonahrweissman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-proto = { path = "../../decide-proto" }
prost = "0.9"
tokio = { version = "1.12", features = ["full"] }
prost-types = "0.9"
async-trait = "0.1.51"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.29"

[build-dependencies]
prost-build = "0.9"
