[package]
name = "peckboard"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-protocol = { path = "../../decide-protocol" }
prost = "0.11.0"
prost-types = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.29"

tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1.51"

gpio-cdev = {version = "0.5.0", features = ["async-tokio"]}
thiserror = "2.0.9"
futures = "0.3.17"

[build-dependencies]
prost-build = "0.11.1"
protobuf-src = "1.1.0+21.5"
