[package]
name = "ranger_vl53l4"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-protocol = { path = "../../decide-protocol" }
prost = "0.13.4"
prost-types = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.29"

tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1.51"
atomic-wait = "1.1.0"
thiserror = "2.0.9"
futures = "0.3.17"
vl53l4cd = "0.4.0"
linux-embedded-hal-async = {path = './linux-embedded-hal-async'}
i2cdev = "0.6.1"
simple_moving_average = "1.0.2"

[build-dependencies]
prost-build = "0.11.1"
protobuf-src = "1.1.0+21.5"