[package]
name = "sound"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-proto = { path = "../../decide-proto" }
prost = "0.9"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1.51"

gpio-cdev = {version = "0.5.0", features = ["async-tokio"]}
futures = "0.3.17"
structopt = "0.3.23"
thiserror = "1.0.29"
simple_logger = "1.13.0"
log = "0.4.14"
tmq = "0.3.0"

regex = "1.5.4"

[build-dependencies]
prost-build = "0.9"
