[package]
name = "sound_alsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-proto = { path = "../../decide-proto" }
prost = "0.9"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1.51"

tracing = "0.1.29"

wav = "1.0.0"
alsa = "0.6.0"
reqwest = "0.11.8"
audrey = "0.3.0"
[build-dependencies]
prost-build = "0.9"