[package]
name = "sound_alsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-protocol = { path = "../../decide-protocol" }
prost = "0.11.0"
prost-types = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"

futures = "0.3.17"
tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1.51"
atomic-wait = "1.1.0"
tracing = "0.1.29"

walkdir = '2.3.3'
wav = "1.0.0"
alsa = "0.7.0"
sndfile = "0.1.1"

[build-dependencies]
prost-build = "0.11.1"
protobuf-src = "1.1.0+21.5"
