[package]
name = "stepper_motor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decide-protocol = { path = "../../decide-protocol" }
prost = "0.9"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.12", features = ["full"] }
async-trait = "0.1.51"

gpio-cdev = {version = "0.5.0", features = ["async-tokio"]}
futures = "0.3.17"
structopt = "0.3.23"
tracing = "0.1.29"
log = "0.4.14"

[build-dependencies]
prost-build = "0.9"
